# TAE

./: LICENSE  README.md  environment.yml  example_config.json  pyproject.toml
data/tab/anonymizations/: TAB_all_Clear.json  TAB_all_Manual_Entity.json  TAB_all_Manual_Presidio_gpt-3.5-turbo-0125.json  TAB_all_Manual_Supression.json  TAB_all_Presidio_Entity.json  TAB_all_Presidio_Supression.json  TAB_test_Manual_Dou.json  TAB_test_Manual_Presidio_gpt-3.5-turbo-0125.json  TAB_test_Manual_Supression.json  TAB_test_spaCy_Entity.json
data/tab/bks/: TAB_all_BK=Public10%.json  TAB_test_BK=Original.json  TAB_test_BK=Public+Original.json  TAB_test_BK=Public.json  TAB_test_BK=Public10%.json  TAB_test_BK=Public25%.json  TAB_test_BK=Public50%.json  TAB_testdev_BK=Public10%.json
tae/: __init__.py  __main__.py  tae.py  tri.py  utils.py
