[tool.poetry]
name = "tae"
version = "0.1.0"
description = "Text Anonymization Evaluator (TAE)"
authors = ["Benet Manzanares-Salor <benet.manzanares@urv.cat>"]
maintainers = ["Benet Manzanares-Salor <benet.manzanares@urv.cat>"]
keywords = ["text anonymization", "evaluation", "privacy", "utility", "nlp", "text processing", "language processing"]
repository = "https://github.com/NorskRegnesentral/tae"
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "tae" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

# Core scientific computing
numpy = "^1.24.3"
pandas = "^2.2.2"
scipy = "^1.13.1"
scikit-learn = "^1.5.1"

# NLP and text processing
spacy = "^3.5.3"
transformers = "^4.42.4"
tokenizers = "^0.19.1"
sentence-transformers = "^4.1.0"
datasets = "^2.19.1"
intervaltree = "^3.1.0"

# Hugging Face ecosystem
huggingface_hub = "^0.23.5"
safetensors = "^0.4.2"
accelerate = "^0.32.1"

# Deep learning (PyTorch) - specifying CUDA version
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.3.1%2Bcu121-cp39-cp39-win_amd64.whl" }
#torch = "^2.3.1"

# Utilities and progress bars
tqdm = "^4.66.4"
click = "^8.1.7"
pyyaml = "^6.0.1"
requests = "^2.32.3"
filelock = "^3.13.1"
packaging = "^24.1"
psutil = "^5.9.0"
regex = "^2023.10.3"
colorama = "^0.4.6"

# Data processing and validation
pyarrow = "^16.1.0"
pydantic = "^1.10.12"
fsspec = "^2024.3.1"
multiprocess = "^0.70.15"
dill = "^0.3.8"

# Additional NLP tools
smart_open = "^5.2.1"
python-dateutil = "^2.9.0"

# Visualization (keeping from original)
matplotlib = "^3.7.2"
seaborn = "^0.12.2"

# Additional tools (keeping from original but updated)
nltk = "^3.8.1"
scikit-multilearn = "^0.2.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

# Fixed spaCy model dependencies
en_core_web_md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.5.0/en_core_web_md-3.5.0-py3-none-any.whl" }
en_core_web_lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.5.0/en_core_web_lg-3.5.0-py3-none-any.whl" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"